<resources>
    <string name="app_name">DogsApp</string>
    <string name="first_btn_title">Go to first Activity</string>
    <string name="second_btn_title">Start second Activity</string>
    <string name="third_btn_title">Create textviews in LinearLayout</string>
    <string name="fourth_btn_title">Create textviews in RelativeLayout</string>
    <string name="fifth_btn_title">Textviews in ConstraintLayout</string>
    <string name="btn_start_dogs">Start Dog App</string>
    <string name="btn_command_voice">Say Woof!</string>
    <string name="text_view_title_dogs_quantity">How many dogs: </string>
    <string name="woof_btn_title">WOOF!</string>
    <string name="text_view_title_preff_dog">Favourite kind of dog: </string>

    <string name="add_item_menu">Add</string>

    <string name="owner_name_hint">Name</string>
    <string name="owner_surname_hint">Surname</string>
    <string name="prefered_dog_hint">Favourite dogs kind</string>
    <string name="add_title_button">Add</string>

    <string name="dog_name_hint">Name</string>
    <string name="dog_kind_hint">Select dog kind</string>
    <string name="dog_weight_hint">Weight</string>
    <string name="dog_age_hint">Age</string>
    <string name="dog_tall_hint">Tall</string>

    <string name="specify_kind_please_toast">Specify dog\'s breed please!</string>

    <string name="title_description">Description</string>
    <string name="title_dog_description">Dog\'s description</string>
    <string name="title_owners_list">Dog Owners</string>
    <string name="title_dogs_list">Dogs</string>
    <string name="title_breeds">Breeds</string>
    <string name="title_add_dog">Add dog</string>
    <string name="title_add_owner">Add owner</string>
    <string name="title_take_shot">Take a shot</string>

    <string name="toolbar_title_add_owner">Add new owner</string>
    <string name="toolbar_title_add_dog">Add new dog</string>
    <string name="toolbar_title_kinds_list">Choose dog kind</string>
    <string name="toolbar_title_detail_info">Dogs info</string>
    <string name="note_owner_added">New owner has been added</string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <string name="no_network_toast">NO NETWORK CONNECTION</string>
    <string name="no_dogs">There is no any dog yet</string>


    <string name="storage_not_granted_snackbar">"Storage permission isn't granted" </string>
    <string name="camera_not_granted_snackbar">"Camera permission isn't granted" </string>
    <string name="need_both_access_snackbar">"Application needs access to camera and storage"</string>
    <string name="need_storage_access_snackbar">"Storage permission is needed to show files count"</string>
    <string name="need_camera_access_snackbar">"Camera permission is needed to take a photo"</string>
    <string name="open_settings_grant_access_toast">"Open Settings and grant access to Camera and Storage"</string>
    <string name="open_settings_grant_storage_toast">"Open Settings and grant the Storage Permission"</string>
    <string name="open_settings_grant_camera_toast">"Open Settings and grant the Camera Permission"</string>
    <string name="camera_permission_denied_toast">"Camera Permissions denied"</string>
    <string name="storage_permission_denied_toast">"Storage Permissions denied"</string>
    <string name="grant_permission_snackbar">"Grant"</string>
    <string name="settings_snackbar">"Settings"</string>

    <string name="weight_measure">kg</string>
    <string name="tall_measure">cm</string>
    <string name="age_year_measure">yrs</string>
    <string name="age_months_measure">months</string>

    <string name="voice_btn_title">VOICE!</string>
    <string name="start_camera_btn_title">Camera</string>
    <string name="cancel_btn_title">Cancel</string>
    <string name="save_photo_btn_title">Save</string>

    <string name="text_view_app_title">DOGGY DOGG</string>
    <string name="text_view_app_description">This app dedicated to Dog-fanciers. It contains the list of dog-owners with detailed information of their pet including its name, type of dog, weight, age and tall</string>
    <string name="text_view_title_kind">Kind of dog: </string>
    <string name="text_view_title_age">Age: </string>
    <string name="text_view_title_weight">Weight: </string>
    <string name="text_view_title_tall">Tall: </string>

    <string name="btn_search">Go</string>
    <string name="first_text_view">This is the first TextView</string>
    <string name="second_text_view">This is the second one</string>
    <string name="third_text_view">The third TextView</string>

</resources>
