<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:gravity="top|center_horizontal">

<include
        android:id="@+id/toolbar_dogs_app" layout="@layout/toolbar"/>

    <EditText
        android:id="@+id/dog_name_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:ems="10"
        android:hint="@string/dog_name_hint"
        />

    <EditText
        android:id="@+id/dog_kind_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:ems="10"
        android:hint="@string/dog_kind_hint"
        />


    <EditText
        android:id="@+id/dog_age_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:ems="10"
        android:digits="0123456789"
        android:inputType="numberDecimal"
        android:hint="@string/dog_age_hint"
        />

    <EditText
        android:id="@+id/dog_tall_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:ems="10"
        android:digits="0123456789"
        android:inputType="numberDecimal"
        android:hint="@string/dog_tall_hint"
        />


    <EditText
        android:id="@+id/dog_weight_edittext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:ems="10"
        android:digits="0123456789"
        android:inputType="numberDecimal"
        android:hint="@string/dog_weight_hint"
        />

    <TextView
        android:id="@+id/dog_kind_select_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Dog breed"/>

    <Button
        android:id="@+id/add_dog_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_8dp"
        android:text="@string/add_title_button"
        />
</LinearLayout>