<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorCustomBlack"
    tools:context=".dogs.ui.dogs.DogPhotoPreviewActivity">
    <ImageView
        android:id="@+id/dog_photo_pre_imageview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"/>
    <LinearLayout
        android:id="@+id/button_containter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel_btn_title"/>

        <Button
            android:id="@+id/new_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_camera_btn_title"/>
        <Button
            android:id="@+id/save_photo_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_photo_btn_title"/>
    </LinearLayout>

</LinearLayout>