<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCustomBlack"
    tools:context=".dogs.ui.dogs.DogPhotoPreviewActivity">

    <ImageView
        android:id="@+id/dog_photo_pre_imageview_frag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"/>

    <RelativeLayout
        android:id="@+id/button_containter_frag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/dog_photo_imageview"
        android:layout_marginBottom="@dimen/margin_8dp">

        <Button
            android:id="@+id/cancel_button_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/new_photo_button_frag"
            android:text="@string/cancel_btn_title"/>

        <Button
            android:id="@+id/new_photo_button_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="@dimen/margin_16dp"
            android:layout_marginRight="@dimen/margin_16dp"
            android:text="@string/start_camera_btn_title"/>

        <Button
            android:id="@+id/save_photo_button_frag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/new_photo_button_frag"
            android:text="@string/save_photo_btn_title"/>
    </RelativeLayout>

</RelativeLayout>