<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dogs.activity.DogsInfoActivity">

    <include android:id="@+id/toolbar_dogs_app" layout="@layout/toolbar"/>


    <TextView
        android:id="@+id/dog_name_textview"
        style="@style/TextViewTitleItem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dog_imageview"/>

    <ImageView
        android:id="@+id/dog_imageview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/shepherd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_dogs_app"/>

    <TextView
        android:id="@+id/kind_dog_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/kind_dog_titile_textview"
        app:layout_constraintTop_toTopOf="@+id/kind_dog_titile_textview"/>

    <TextView
        android:id="@+id/dog_age_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toEndOf="@+id/age_dog_title_textview"
        app:layout_constraintTop_toTopOf="@+id/age_dog_title_textview"/>

    <TextView
        android:id="@+id/dog_weight_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        app:layout_constraintStart_toEndOf="@+id/weight_dog_title_textview"
        app:layout_constraintTop_toTopOf="@+id/weight_dog_title_textview"/>

    <TextView
        android:id="@+id/dog_tall_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        app:layout_constraintStart_toEndOf="@+id/dog_tall_title_textview"
        app:layout_constraintTop_toTopOf="@+id/dog_tall_title_textview"/>

    <TextView
        android:id="@+id/kind_dog_titile_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:text="@string/text_view_title_kind"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dog_name_textview"/>

    <TextView
        android:id="@+id/age_dog_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:text="@string/text_view_title_age"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kind_dog_titile_textview"/>

    <TextView
        android:id="@+id/weight_dog_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:text="@string/text_view_title_weight"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_dog_title_textview"/>

    <TextView
        android:id="@+id/dog_tall_title_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_8dp"
        android:layout_marginTop="@dimen/margin_24dp"
        android:text="@string/text_view_title_tall"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weight_dog_title_textview"/>

    <Button
        android:id="@+id/button_voice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/voice_btn_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dog_tall_title_textview"/>
</android.support.constraint.ConstraintLayout>