<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".dogs.ui.dogs.DogsInfoFragment">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/MainDogApp">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:contentScrim="@color/colorCustomYellow"
            app:expandedTitleTextAppearance="@android:color/transparent"
            android:fitsSystemWindows="true"
            >

            <ImageView
                android:id="@+id/dog_imageview_frag"
                app:layout_collapseMode="parallax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:scaleType="fitCenter"
                android:src="@drawable/shepherd"/>

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        >

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_16dp"
            app:cardElevation="0dp"
            app:cardUseCompatPadding="true"
            >
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/margin_24dp">
                <TextView
                    android:id="@+id/dog_name_textview_frag"
                    style="@style/TextViewTitleItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"/>


                <TextView
                    android:id="@+id/kind_dog_textview_frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/kind_dog_titile_textview_frag"
                    app:layout_constraintTop_toTopOf="@+id/kind_dog_titile_textview_frag"/>

                <TextView
                    android:id="@+id/dog_age_textview_frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    app:layout_constraintStart_toEndOf="@+id/age_dog_title_textview_frag"
                    app:layout_constraintTop_toTopOf="@+id/age_dog_title_textview_frag"/>

                <TextView
                    android:id="@+id/dog_weight_textview_frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp"
                    app:layout_constraintStart_toEndOf="@+id/weight_dog_title_textview_frag"
                    app:layout_constraintTop_toTopOf="@+id/weight_dog_title_textview_frag"/>

                <TextView
                    android:id="@+id/dog_tall_textview_frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp"
                    app:layout_constraintStart_toEndOf="@+id/dog_tall_title_textview_frag"
                    app:layout_constraintTop_toTopOf="@+id/dog_tall_title_textview_frag"/>

                <TextView
                    android:id="@+id/kind_dog_titile_textview_frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:text="@string/text_view_title_kind"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/dog_name_textview_frag"/>

                <TextView
                    android:id="@+id/age_dog_title_textview_frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:layout_marginTop="@dimen/margin_24dp"
                    android:text="@string/text_view_title_age"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/kind_dog_titile_textview_frag"/>

                <TextView
                    android:id="@+id/weight_dog_title_textview_frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:layout_marginTop="@dimen/margin_24dp"
                    android:text="@string/text_view_title_weight"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/age_dog_title_textview_frag"/>

                <TextView
                    android:id="@+id/dog_tall_title_textview_frag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_8dp"
                    android:layout_marginTop="@dimen/margin_24dp"
                    android:text="@string/text_view_title_tall"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/weight_dog_title_textview_frag"/>

            </android.support.constraint.ConstraintLayout>

        </android.support.v7.widget.CardView>

    </android.support.v4.widget.NestedScrollView>
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/barking_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/dog_barks"
        app:backgroundTint="@color/colorCustomYellow"
        app:layout_anchor="@id/app_bar_layout"
        android:layout_margin="@dimen/margin_16dp"
        app:layout_anchorGravity="bottom|right|end"/>

</android.support.design.widget.CoordinatorLayout>